[package]
name = "ff"
version = "0.2.0"
edition = "2021"
license = "MIT"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
bstr = "1.9.1"
clap = { version = "4.5.2", features = ["derive"] }
crossbeam-channel = "0.5.12"
ignore = { version = "0.4.22", features = ["simd-accel"] }
wildflower = "0.3.0"
